# RDFPortal-MCP

./: .gitignore  README.md  aspirin_kinase_rdf_investigation_summary.md  cancer_proteins_drugs_structures_summary.md  glycosmos_sparqlist_natural_lang_mapping.yml  main.py  pyproject.toml  read_yaml_info.py  schema_summary.yaml
evaluation/: README.md  analyze_validation.py  browser_timer.js  execution_guide.md  execution_protocol.yaml  ground_truth_template.yaml  rdf_portal_evaluation_qa.yaml  rdf_portal_evaluation_readme.md  rdf_portal_evaluation_template.yaml  recording_sheet.csv  recording_template.tsv  run_validation.py  scoring_rubrics.yaml  timer_helper.py  verify_ground_truth.md
mie/: bacdive.yaml  chebi.yaml  chembl.yaml  clinvar.yaml  ddbj.yaml  ensembl.yaml  glycosmos.yaml  go.yaml  medgen.yaml  mediadive.yaml  mesh.yaml  mondo.yaml  nando.yaml  ncbigene.yaml  pdb.yaml  pubchem.yaml  pubmed.yaml  pubtator.yaml  reactome.yaml  rhea.yaml  taxonomy.yaml  uniprot.yaml  wikidata.yaml
rdf-config/: glycosmos.yaml  pdb_rdf_config.yaml  pubchem.yaml  template.yaml  uniprot.yaml
resources/: MIE_prompt-old.md  MIE_prompt.md  MIE_prompt_compact.md  MIE_template.yaml  bacdive.yaml  chebi.yaml  chembl.md  chembl.yaml  ddbj.yaml  discover-analysis.md  glycosmos.yaml  glycosmos_spaqrlist_chaining_mapping.yml  glycosmos_sparqlist_natural_lang_mapping.yml  go.yaml  mediadive.yaml  mesh.yaml  mondo.yaml  pdb.yaml  pubchem.yaml  qa.md  rdf_portal_guide-basic.md  rdf_portal_guide-full.md  rdf_portal_guide-v13.0.md  rdf_portal_guide-v14.0.md  rdf_portal_guide-v14.1.md  (+8 more)
(+10 files in other folders)
