[project]
name = "RDFPortal-MCP"
version = "0.1.0"
description = "RDF Portal MCP Server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.10.5",
    "httpx>=0.28.1",
    "requests>=2.23.3",
]
authors = [{ name = "Akira R. Kinjo" }]

[project.optional-dependencies]
example = [
    "black>=25.1.0",
    "langchain-openai>=0.3.11",
    "langgraph>=0.3.21",
    "langchain-core>=0.3.49",
    "langchain-mcp-adapters>=0.0.6",
]
